--- a/sobremip5.html
+++ b/sobremip5.html
@@ -23,7 +23,7 @@
     <br>
 
     <img src="woman portrait.jpg"alt="Portrait of a beautiful African woman">
-    <h4><p>Welcome to Sobre mi, this is my personal page where I have provided detail information into different aspects of my life. <br>Here you will have insight into my educational background, where I have worked in the past and what I do to relax things.</p> <p>If you are intrigue enough to open my page, I will be delighted if you continue to scroll page after page so you can get all the details therein.</p></h4>
+    <h4><p>Welcome to Sobre mi, this is my personal page where I have provided detailed information into different aspects of my life. <br>Here you will have insight into my educational background, where I have worked in the past and what I do to relax things.</p> <p>If you are intrigue enough to open my page, I will be delighted if you continue to scroll page after page so you can get all the details therein.</p></h4>
 
 </body>
 </html>
